# release-mirror

./: .gitignore  .gitlab-ci.yml  README.md  config.example.toml  config.example.yaml  pyproject.toml
.github/workflows/: mypy.yml  pytest.yml  ruff.yml
src/github_mirror/: cli.py  client.py  gitlab_client.py  log.py  mirror.py
src/release_mirror/: base_client.py  client.py  gitlab_client.py  models.py
tests/: test_models.py
